# rust-us-in-b-minor

./: .gitignore  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  rutie_ruby_example.gemspec
C/: bare.h  main.c
bare-rb/ext/barerbrs/: Cargo.toml
bare-rb/src/lib/librustbare/: ffi.rb  librustbare.dylib
bench/: bench.rb  test1.rb  test2.rb  test3.rb  test4.rb  timeit.rb  vsjson.rb
bench/web_bench/: client.rb  web_server.rb
ext/barerbrs/: Cargo.toml
ext/barerbrs/src/: lib.rs
lib/: bare.rb  run.rb  rutie_ruby_example.rb  tests.rb
lib/rutie_ruby_example/: version.rb
src/: array.rs  bare-rb.gemspec  fixed_array.rs  float32.rs  float64.rs  into_rust.rs  lib.rs  main.rs
src/lib/: bare-rust.rb  barerbrs.rb  sum_array.rb
src/lib/librustbare/: ffi.rb
src/types/: array.rs  bool.rs  data.rs  data_fixed_len.rs  enm.rs  fixed_array.rs  float32.rs  float64.rs  i16.rs  i32.rs  i64.rs  i8.rs  int.rs  map.rs  mod.rs  optional.rs  rstring.rs  strct.rs  u16.rs  u32.rs  u64.rs  u8.rs  uint.rs  union.rs  void.rs
